# KVStore

./: .gitignore  LICENSE  README.md  exec_simple  kvstore.cabal  kvstore.txt  stack.yaml  todo.txt
client/: Client.hs
database/: kvstore_0.txt  kvstore_1.txt  kvstore_10.txt  kvstore_2.txt
database/logs/: log_kvstore_0.txt  log_kvstore_0.txt.bak  log_kvstore_1.txt
exe/: kvstore-client  kvstore-master
master/: Master.hs
scripts/: client.AppleScript  master.AppleScript  worker.AppleScript
slave/: Slave.hs
src/: ClientLib.hs  KVProtocol.hs  Lib.hs  Log.hs  Utils.hs
test/: Spec.hs
worker/: Worker.hs
