name:                kvstore
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/ntindall/kvstore#readme
license:             BSD3
license-file:        LICENSE
author:              Nathan James Tindall
maintainer:          ntindall@stanford.edu
copyright:           Nathan James Tindall
category:            web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, KVProtocol
  build-depends:       base >= 4.7 && < 5
                     , network
                     , binary
                     , bytestring
  default-language:    Haskell2010

executable kvstore-master
  hs-source-dirs:      master
  main-is:             Master.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kvstore
                     , network
                     , binary
                     , bytestring
  default-language:    Haskell2010

executable kvstore-slave
  hs-source-dirs:      slave
  main-is:             Slave.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kvstore
                     , network
                     , binary
                     , bytestring
  default-language:    Haskell2010

executable kvstore-client
  hs-source-dirs:      client
  main-is:             Client.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kvstore
                     , network
                     , binary
                     , bytestring
  default-language:    Haskell2010

test-suite kvstore-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , kvstore
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ntindall/kvstore
